--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>SENGHAKCHHUN</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -13,23 +13,36 @@
 </head>
 
 <body>
-  <div class="container">
-    <nav>
-      <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary rounded-5 shadow-sm" id="pillNav2" role="tablist"
-        style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
-        <li class="nav-item" role="presentation"><b>
-            <button class="nav-link active rounded-5" id="home-tab2" data-bs-toggle="tab" type="button" role="tab"
-              aria-selected="true">Home</button></b>
-        </li>
-        <li class="nav-item" role="presentation"><b>
-            <button class="nav-link rounded-5" id="profile-tab2" data-bs-toggle="tab" type="button" role="tab"
-              aria-selected="false">Profile</button></b>
-        </li>
-        <li class="nav-item" role="presentation"><b>
-            <button class="nav-link rounded-5" id="contact-tab2" data-bs-toggle="tab" type="button" role="tab"
-              aria-selected="false">Contact</button></b>
-        </li>
-      </ul>
+  <div class="container-fluid" style="background-color: #EDF2F8;">
+    <nav class="col-sm-12 d-flex align-items-center justify-content-">
+      <div class="logo col-sm-4 text-center">
+        <img src="./images/2.png" alt="logo" width="200px">
+      </div>
+      <div class="menu-bar col-sm-8 ml-3">
+        <ul class="nav nav-pills nav-fill gap-2 p-1 small" id="pillNav2" role="tablist"
+          style="--bs-nav-link-color: var(--bs-dark); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
+          <li class="nav-item" role="presentation"><b>
+              <a class="nav-link active rounded-1" id="home-tab2" data-bs-toggle="tab" type="button" role="tab"
+                aria-selected="true">Home</a></b>
+          </li>
+          <li class="nav-item" role="presentation"><b>
+              <a class="nav-link rounded-1" id="profile-tab2" data-bs-toggle="tab" type="button" role="tab"
+                aria-selected="false">About</a></b>
+          </li>
+          <li class="nav-item" role="presentation"><b>
+              <a class="nav-link rounded-1" id="profile-tab2" data-bs-toggle="tab" type="button" role="tab"
+                aria-selected="false">Experience</a></b>
+          </li>
+          <li class="nav-item" role="presentation"><b>
+              <a class="nav-link rounded-1" id="contact-tab2" data-bs-toggle="tab" type="button" role="tab"
+                aria-selected="false">Skills</a></b>
+          </li>
+          <li class="nav-item" role="presentation"><b>
+              <a class="nav-link rounded-1" id="contact-tab2" data-bs-toggle="tab" type="button" role="tab"
+                aria-selected="false">Contact</a></b>
+          </li>
+        </ul>
+      </div>
     </nav>
   </div>
 </body>
