--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SENGHAKCHHUN</title>
+  <link rel="icon" href="./images/3.png" type="image/icon type">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -13,38 +14,51 @@
 </head>
 
 <body>
-  <div class="container-fluid" style="background-color: #EDF2F8;">
-    <nav class="col-sm-12 d-flex align-items-center justify-content-">
-      <div class="logo col-sm-4 text-center">
-        <img src="./images/2.png" alt="logo" width="200px">
+  <nav class="col-sm-12 d-flex align-items-center justify-content-center" style="background-color: #EDF2F8;">
+    <div class="logo col-sm-4 text-center">
+      <img src="./images/2.png" alt="logo" width="200px">
+    </div>
+    <div class="menu-bar col-sm-8 ml-3">
+      <ul class="nav nav-pills nav-fill gap-2 p-1 small" id="pillNav2 home" role="tablist"
+        style="--bs-nav-link-color: var(--bs-dark); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
+        <li class="nav-item" role="presentation"><b>
+            <a class="nav-link active rounded-1" id="home-tab2" data-bs-toggle="tab" type="button" role="tab"
+              aria-selected="true">Home</a></b>
+        </li>
+        <li class="nav-item" role="presentation"><b>
+            <a class="nav-link rounded-1" id="profile-tab2" data-bs-toggle="tab" type="button" role="tab"
+              aria-selected="false">About</a></b>
+        </li>
+        <li class="nav-item" role="presentation"><b>
+            <a class="nav-link rounded-1" id="experience-tab2" data-bs-toggle="tab" type="button" role="tab"
+              aria-selected="false">Experience</a></b>
+        </li>
+        <li class="nav-item" role="presentation"><b>
+            <a class="nav-link rounded-1" id="skill-tab2" data-bs-toggle="tab" type="button" role="tab"
+              aria-selected="false">Skills</a></b>
+        </li>
+        <li class="nav-item" role="presentation"><b>
+            <a class="nav-link rounded-1" id="contact-tab2" data-bs-toggle="tab" type="button" role="tab"
+              aria-selected="false">Contact</a></b>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div id="#home"  style="background-color: #f0f5fa">
+    <h1>sf</h1>
+    <div class="p-3 border border-light shadow rounded-4 position-absolute bottom-1 start-1 z-index-9 d-none d-xl-block mb-1 ms-5">
+      <div class="d-flex justify-content-between align-items-center">
+        <!-- Icon -->
+        <span class="icon-sm "><h1>👋</h1></span>
+        <!-- Info -->
+        <div class="text-start ms-3">
+          <h6 class="mb-0">Hello I'm </h6>
+          <h3 class="mb-0">SENGHAK</h3>
+        </div>
       </div>
-      <div class="menu-bar col-sm-8 ml-3">
-        <ul class="nav nav-pills nav-fill gap-2 p-1 small" id="pillNav2" role="tablist"
-          style="--bs-nav-link-color: var(--bs-dark); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
-          <li class="nav-item" role="presentation"><b>
-              <a class="nav-link active rounded-1" id="home-tab2" data-bs-toggle="tab" type="button" role="tab"
-                aria-selected="true">Home</a></b>
-          </li>
-          <li class="nav-item" role="presentation"><b>
-              <a class="nav-link rounded-1" id="profile-tab2" data-bs-toggle="tab" type="button" role="tab"
-                aria-selected="false">About</a></b>
-          </li>
-          <li class="nav-item" role="presentation"><b>
-              <a class="nav-link rounded-1" id="profile-tab2" data-bs-toggle="tab" type="button" role="tab"
-                aria-selected="false">Experience</a></b>
-          </li>
-          <li class="nav-item" role="presentation"><b>
-              <a class="nav-link rounded-1" id="contact-tab2" data-bs-toggle="tab" type="button" role="tab"
-                aria-selected="false">Skills</a></b>
-          </li>
-          <li class="nav-item" role="presentation"><b>
-              <a class="nav-link rounded-1" id="contact-tab2" data-bs-toggle="tab" type="button" role="tab"
-                aria-selected="false">Contact</a></b>
-          </li>
-        </ul>
-      </div>
-    </nav>
+    </div>
   </div>
+
 </body>
 
 </html>
