--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <div class="menu-bar col-sm-8 ml-3">
       <ul class="nav nav-pills nav-fill gap-2 p-1 small">
         <li class="nav-item"><b>
-            <a class="nav-link active rounded-1" id="profile-tab2 #about" data-bs-toggle="tab" type="button" role="tab">Home</a></b>
+            <a class="nav-link active rounded-1" id="profile-tab2 #about" data-bs-toggle="tab" type="button"
+              role="tab">Home</a></b>
         </li>
         <li class="nav-item"><b>
             <a class="nav-link rounded-1" href="#about" data-bs-toggle="tab" type="button" role="tab">About</a></b>
@@ -30,7 +31,8 @@
             <a class="nav-link rounded-1" id="skill-tab2" data-bs-toggle="tab" type="button" role="tab">Skills</a></b>
         </li>
         <li class="nav-item"><b>
-            <a class="nav-link rounded-1" id="contact-tab2" data-bs-toggle="tab" type="button" role="tab">Contact</a></b>
+            <a class="nav-link rounded-1" id="contact-tab2" data-bs-toggle="tab" type="button"
+              role="tab">Contact</a></b>
         </li>
       </ul>
     </div>
@@ -66,14 +68,39 @@
       <img src="./images/html.png" alt="html">
     </div>
   </div>
-  <div id="#about" class="mt-3">
-    <div class="content text-center">
-      <h3 class="text-center text-primary mb-4">About Me </h3>
-      <!-- <h4 class="">HONEST | Work hard | Don't give up</h4> -->
-      <h5>I'm Senghak. I'm 19 years old. </h5>
-      <h5>I have learnt HTML, CSS, GitHub, JavaScript, Node js, PHP, OOP, Laravel, Vue js, Bootstrap, Sass. </h5>
-      
+  <div id="#about" class="mt-5 ">
+    <div class="d-flex justify-content-sm-around justify-content-md-around gap-5 justify-content-xl-center flex-wrap">
+      <div class="card shadow-sm bg-light border-light" style="width: 18rem;">
+        <img src="./images/web_design.png" class="card-img-top" alt="web design">
+        <div class="card-body">
+          <h5 class="card-title text-primary">Web Designer</h5>
+          <p class="card-text">I am a Web Designer. I have some skills in Html, CSS, and bootstrap. I am interesting
+            to make good looking with flexible situation.</p>
+          <a href="https://freebookstore.online/" target="_blank" type="button" class="text-decoration-none"><button
+              class="btn btn-primary">View project</button></a>
+        </div>
+      </div>
+      <div class="card shadow-sm bg-light border-light" style="width: 18rem;">
+        <img src="./images/front_end.png" class="card-img-top" alt="web design">
+        <div class="card-body">
+          <h5 class="card-title text-primary">Front End Developer</h5>
+          <p class="card-text">I am a Front End Developer. I have some skills in Html, CSS, and JavaScript</p>
+          <a href="https://wa-g3-project-js.vercel.app/" target="_blank"><button class="btn btn-primary">View
+              project</button></a>
+        </div>
+      </div>
+      <div class="card shadow-sm bg-light border-light" style="width: 18rem;">
+        <img src="./images/back_end.png" class="card-img-top" alt="web design">
+        <div class="card-body">
+          <h5 class="card-title text-primary">Back End Developer</h5>
+          <p class="card-text">I am a Back End Developer. I have some skills with Node js, Database to manage data.
+            Especailly I have skill with PHP.</p>
+          <a href="https://github.com/rithsreynang/G4-Googleclassroom" target="_blank" type="button" class="text-decoration-none"><button
+              class="btn btn-primary">View project</button></a>
+        </div>
+      </div>
     </div>
+  </div>
   </div>
 
 </body>
