--- a/index.html
+++ b/index.html
@@ -14,29 +14,31 @@
 </head>
 
 <body>
-  <nav
-    class="col-sm-12 p-1 d-flex align-items-center shadow-sm justify-content-lg-around justify-content-md-between justify-content-xl-betwen bg-dark">
-    <div class="​​​​logo">
+  <nav class="p-1 d-sm-none​​​​​ navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="​​​​logo​​​​​​">
       <img src="./images/2.png" alt="logo" width="200px">
     </div>
-    <div class="menu-bar col-lg-4 col-md-6 d-sm-none​​​​​​ ml-3">
-      <ul class="nav nav-pills nav-fill gap-2 p-1 small">
+    <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+      <ul class="navbar-nav ms-auto p-1 gap-2 ml-1 mr-1">
         <li class="nav-item"><b>
-            <a class="nav-link rounded-1 text-dark bg-white " href="#home">Home</a></b>
+            <a class="nav-link rounded-1" href="#home" type="button">Home</a></b>
           </b>
         </li>
         <li class="nav-item"><b>
-            <a class="nav-link rounded-1 text-dark bg-white" href="#about" type="button">About</a></b>
+            <a class="nav-link rounded-1 " href="#about" type="button">About</a></b>
         </li>
         <li class="nav-item"><b>
-            <a class="nav-link rounded-1 text-dark bg-white" href="#contact" type="button">Contact</a></b>
+            <a class="nav-link rounded-1 " href="#contact" type="button">Contact</a></b>
         </li>
       </ul>
     </div>
   </nav>
   <div id="home" class="pt-5 pb-5">
-    <div class="col-12 d-flex justify-content-center">
-      <div class="p-3 col-sm-2 col-lg-3 border-light shadow rounded-4">
+    <div class="col-12 d-flex justify-content-center ">
+      <div class="p-3 col-sm-2 col-lg-3 col-md-3 d-none d-sm-block border-light shadow rounded-4">
         <div class="d-flex justify-content-lg-around">
           <!-- Icon -->
           <span class="icon-sm ">
@@ -51,16 +53,8 @@
       </div>
     </div>
     <div class="mt-5 d-flex justify-content-center align-items-center">
-      <div class="col-lg-4 d-flex flex-column align-items-end gap-2">
-        <img src="./images/node.png" alt="js" width="130px">
-        <img src="./images/js.png" alt="js" width="130px">
-      </div>
       <div class="mr-2 col-lg-4 text-center">
         <img src="./images/01.png" alt="myPhoto" width="350px">
-      </div>
-      <div class="col-lg-4 d-flex flex-column align-items-start gap-2 ">
-        <img src="./images/php.png" alt="php">
-        <img src="./images/html.png" alt="html">
       </div>
     </div>
     <div class="d-flex justify-content-center mt-5">
@@ -73,8 +67,9 @@
         technoloy and It bring me to study on technoloy. Currently, I live in Phnom Penh. I have learnt Computer Science
         that focus on Web Development Skill. I have learnt some Programming Languages and framework. </p>
     </div>
-    <div class="d-flex mt-5 mb-4 flex-wrap justify-content-md-around gap-5 justify-content-xl-center ">
-      <div class="card bg-light border-light" style="width: 18rem;">
+    <div
+      class="d-flex mt-5 mb-4 flex-wrap justify-content-md-around gap-5 justify-content-xl-center align-items-sm-centerk justify-content-sm-center">
+      <div class="card bg-light border-light col-lg-3 col-md-3">
         <img src="./images/web_design.png" class="card-img-top" alt="web design">
         <div class="card-body d-flex flex-column justify-content-between">
           <h5 class="card-title text-center text-info">Web Designer</h5>
@@ -86,7 +81,7 @@
           </div>
         </div>
       </div>
-      <div class="card shadow-sm bg-light border-light" style="width: 18rem;">
+      <div class="card bg-light border-light col-lg-3 col-md-3">
         <img src="./images/front_end.png" class="card-img-top" alt="web design">
         <div class="card-body d-flex flex-column justify-content-between">
           <h5 class="card-title text-center text-info">Front End Developer</h5>
@@ -97,7 +92,7 @@
           </div>
         </div>
       </div>
-      <div class="card shadow-sm bg-light border-light" style="width: 18rem;">
+      <div class="card shadow-sm bg-light border-light col-lg-3 col-md-3">
         <img src="./images/back_end.png" class="card-img-top" alt="web design">
         <div class="card-body d-flex flex-column justify-content-between">
           <h5 class="card-title text-center text-info">Back End Developer</h5>
